# chrono-ros2-joystick-sim

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: chrono_joy_driver.yaml
config/profiles/: combined_axis_coast.yaml  split_triggers_deadman_brake.yaml
docker/: Dockerfile  run-container.md  run.sh
docs/: implementation-report.md
include/chrono_sim_control/: joystick_mapper.hpp
launch/: joystick_hmmwv.launch.py
scripts/: run_mapper_smoke.sh  run_ros2_smoke.sh
src/: joystick_mapper.cpp  simplified_driver.cpp
tests/: joystick_mapper_smoke.cpp  test_joystick_mapper.cpp
